added image input

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Icon GMan</h1>
+    <div class="input-image-box">
+        <input type="url" placeholder="paste image url here">
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
