added btn for genarating icons

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,11 @@
     <div class="input-image-box">
         <input type="url" placeholder="paste image url here">
     </div>
+    <div class="genarate-box">
+        <button>
+            Create
+        </button>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
