--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
             Create
         </button>
     </div>
+    <div class="result">
+        
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
