--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
     <div class="input-image-box">
         <input type="url" placeholder="paste image url here">
     </div>
-    <div class="genarate-box">
+    <div class="btn-box">
         <button>
             Create
         </button>
     </div>
     <div class="result">
-        
+
     </div>
     <script src="app.js"></script>
 </body>
