added id to input box

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Icon GMan</h1>
     <div class="input-image-box">
-        <input type="url" placeholder="paste image url here">
+        <input id="image-url" type="url" placeholder="paste image url here">
     </div>
     <div class="btn-box">
         <button>
