added id to btn {btn-create)

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <input id="image-url" type="url" placeholder="paste image url here">
     </div>
     <div class="btn-box">
-        <button>
+        <button id="btn-create">
             Create
         </button>
     </div>
