--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,19 @@
 <body>
     <h1>Icon GMan</h1>
     <div class="input-image-box">
-        <input id="image-url" type="file" accept="image/*">
-        <canvas id="outputCanvas" style="display: none;"></canvas>
+        <input  id="imageInput" type="url" >
+        <canvas  id="outputCanvas" style="display: none;"></canvas>
     </div>
     <div class="btn-box">
-        <button id="btn-create">
+        <button  id="btn-create">
             Create
         </button>
     </div>
-    <div class="result">
-        <img id="outputImage" src="" alt="Resized Image">
+    <div id="result-box" class="result">
+      
 
     </div>
-    <script src="app.js"></script>
-</body>
+    <script  type="module" src="app.js"></script>
+</body> 
 
 </html>
